--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-POSTGRES_URL="postgres://default:lKRj0YCQGTH7@ep-nameless-wildflower-a4gyznyr-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
-POSTGRES_PRISMA_URL="postgres://default:lKRj0YCQGTH7@ep-nameless-wildflower-a4gyznyr-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
-POSTGRES_URL_NO_SSL="postgres://default:lKRj0YCQGTH7@ep-nameless-wildflower-a4gyznyr-pooler.us-east-1.aws.neon.tech:5432/verceldb"
-POSTGRES_URL_NON_POOLING="postgres://default:lKRj0YCQGTH7@ep-nameless-wildflower-a4gyznyr.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
-POSTGRES_USER="default"
-POSTGRES_HOST="ep-nameless-wildflower-a4gyznyr-pooler.us-east-1.aws.neon.tech"
-POSTGRES_PASSWORD="lKRj0YCQGTH7"
-POSTGRES_DATABASE="verceldb"
+# POSTGRES_URL="postgres://default:lKRj0YCQGTH7@ep-nameless-wildflower-a4gyznyr-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+# POSTGRES_PRISMA_URL="postgres://default:lKRj0YCQGTH7@ep-nameless-wildflower-a4gyznyr-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+# POSTGRES_URL_NO_SSL="postgres://default:lKRj0YCQGTH7@ep-nameless-wildflower-a4gyznyr-pooler.us-east-1.aws.neon.tech:5432/verceldb"
+# POSTGRES_URL_NON_POOLING="postgres://default:lKRj0YCQGTH7@ep-nameless-wildflower-a4gyznyr.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+# POSTGRES_USER="default"
+# POSTGRES_HOST="ep-nameless-wildflower-a4gyznyr-pooler.us-east-1.aws.neon.tech"
+# POSTGRES_PASSWORD="lKRj0YCQGTH7"
+# POSTGRES_DATABASE="verceldb"
